testdata/good/before/slotif/index.tw
<section>
@component('comp')
@slotif(true)Textwire@end
@slotif(true, 'span')Go@end
@slotif(false, 'h2')React@end
@end
</section>